feat: correct filters, paginated category, send task updated email
- add task_status_histories in  migration
- add responsible name in get All categories
